# motor2040_serial

./: .gitignore  CMakeLists.txt  README.md  test_comms.py
src/: main.cpp  usb_descriptors.c
